data/derived/fa15/progs/unify/prog2371.ml.out
Characters 216-221:
  	  helper (seen',rest') 
             ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type bool
